Finish code, get images for report

--- a/2_EDA.ipynb
+++ b/2_EDA.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2842dde6-2da9-419f-b575-c383fa19f1e4",
+   "metadata": {},
+   "source": [
+    "This notebook performs some exploratory analysis on the energy consumption, generation & pricing data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a25d35c7-71db-4e5e-aeea-b511ebf1367d",
@@ -1055,20 +1063,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee19475-0c0f-49a0-83f4-2b1f3f33763f",
-   "metadata": {},
-   "source": [
-    "TRY is more volatile as expected. Use USD or EUR as target."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6c9c5e14-63fb-479a-856a-0fcaa9cba5f7",
    "metadata": {},
    "source": [
-    "Prices ramped up exponentially after 2021, and declined exponentially from roughly fall 2022, possibly returning to a new process mean around roughly mid 2023. Likely no linear trend otherwise.\n",
-    "\n",
-    "Should reflect the 2021-2023 cyclicality with some sort of covariate. Maybe a piecewise exponential that takes a value of 0 othwerise?"
+    "Prices ramped up exponentially after 2021, and declined exponentially from roughly fall 2022, possibly returning to a new process mean around roughly mid 2023. Likely no linear trend otherwise."
    ]
   },
   {
@@ -1514,7 +1512,11 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "b232b24a-87ba-45b0-ae1c-b16dbcc23b67",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_autocorrelation(data = df, data_daily = df_daily, variable = \"USD/MWh\", lags_hourly = 48, lags_daily = 30):\n",
