--- a/3.0_FeatureEngineering.ipynb
+++ b/3.0_FeatureEngineering.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f19d7f0e-1b98-4dff-a429-dfd29630e5d8",
+   "metadata": {},
+   "source": [
+    "This notebook adds some time & seasonality features to the consumption data, to be used as covariates in the sequence models in notebooks 3.1 and 3.2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f5758ce9-a318-4200-a8c9-eeac6f890b7a",
@@ -54,17 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Real-time consumption & generation is available with a 2 hour lag. Shift them back\n",
+    "# Real-time consumption is available with a 2 hour lag. Shift them back\n",
     "df[\"consumption_lag2\"] = df[\"consumption_MWh\"].shift(2)\n",
-    "\n",
-    "# gen_cols = df.columns.values[2:-4].tolist()\n",
-    "# lag_cols = [col + \"_lag2\" for col in gen_cols]\n",
-    "\n",
-    "# df[gen_cols] = df[gen_cols].apply(lambda col: col.shift(2), axis = 1)\n",
-    "# df[gen_cols] = df[gen_cols].rename(\n",
-    "#     dict(zip(gen_cols, lag_cols))\n",
-    "# )\n",
-    "\n",
     "df = df.dropna()"
    ]
   },
@@ -432,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
