--- a/MISC_TorchLinearExtrapolation.ipynb
+++ b/MISC_TorchLinearExtrapolation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cd37f19a-5b46-4007-98de-b112d5da157c",
+   "metadata": {},
+   "source": [
+    "This notebook demonstrates how linear extrapolation can be applied in Torch, by performing linear regression in matrix form on batched sequences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "42bcca38-c8f9-4165-aa68-1481215b6ff6",
@@ -50,9 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate mock source sequence & time indices\n",
     "source = torch.randn(input_steps)\n",
     "source_idx = torch.arange(0, input_steps).float()\n",
-    "ones = torch.ones(input_steps)"
+    "target_idx = torch.arange(input_steps, input_steps + output_steps).float()"
    ]
   },
   {
@@ -62,6 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create matrices for linear regression\n",
+    "ones = torch.ones(input_steps)\n",
     "y = source.clone().unsqueeze(-1)\n",
     "x = torch.stack((source_idx, ones), 1)\n",
     "x_t = torch.transpose(x, 0, 1)"
@@ -179,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Estimate linear regression parameters in matrix format\n",
     "params = torch.matmul(\n",
     "    torch.matmul(x_t, y).squeeze(-1), torch.linalg.inv(torch.matmul(x_t, x))\n",
     ")\n",
@@ -214,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_idx = torch.arange(input_steps, input_steps + output_steps).float()\n",
+    "# Get fitted values for source sequence & extrapolated values for target sequence\n",
     "fitted = source_idx * slope + constant\n",
     "target = target_idx * slope + constant"
    ]
@@ -261,6 +273,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "942e9074-28f4-4e8f-b7f6-8d4e74757268",
+   "metadata": {},
+   "source": [
+    "The same as above, but we have to play with tensor shapes a bit to get the broadcasting right."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "3f8f9f58-63f7-4d4d-af4b-af63d73d2646",
@@ -269,7 +289,7 @@
    "source": [
     "source = torch.randn(batch_size, input_steps)\n",
     "source_idx = torch.arange(0, input_steps).float()\n",
-    "ones = torch.ones(input_steps)"
+    "target_idx = torch.arange(input_steps, input_steps + output_steps).float()"
    ]
   },
   {
@@ -279,6 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ones = torch.ones(input_steps)\n",
     "y = source.clone().unsqueeze(-1)\n",
     "x = torch.stack((source_idx, ones), 1)\n",
     "x_t = torch.transpose(x, 0, 1)"
@@ -431,7 +452,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_idx = torch.arange(input_steps, input_steps + output_steps).float()\n",
     "fitted = source_idx.repeat(batch_size, 1) * slopes.unsqueeze(-1) + constants.unsqueeze(-1)\n",
     "target = target_idx.repeat(batch_size, 1) * slopes.unsqueeze(-1) + constants.unsqueeze(-1)"
    ]
