--- a/WIP_DartsLM.ipynb
+++ b/WIP_DartsLM.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "208f5975-e259-4232-b6e6-9498534a5d56",
+   "metadata": {},
+   "source": [
+    "This notebook applies the same testing scheme in notebooks 3.1 and 3.2 to a linear regression model, using the Darts package."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b482a333-a36e-49b5-8eac-33b9a2d6aca0",
@@ -425,13 +433,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c65ba1f-0df2-4359-bfe3-3db284793884",
+   "cell_type": "markdown",
+   "id": "185a2a33-219c-48af-b5bd-b95156e9e2ca",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "len(ts_hist)"
+    "Takes longer than 1 hour to run with retraining at each evaluation step."
    ]
   }
  ],
