--- a/1_DataPrep.ipynb
+++ b/1_DataPrep.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "02c16907-f501-4694-8c30-28bc46125ea1",
+   "metadata": {},
+   "source": [
+    "This notebook reformats the energy consumption, generation & pricing data sourced from the EPİAŞ transparency platform ([link](https://seffaflik.epias.com.tr/home))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f166a290-8846-4fbb-9dcb-72135502ba1e",
    "metadata": {},
    "source": [
@@ -1862,7 +1870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
