Write ExactGP training wrapper code

--- a/4.0_GaussianProcess.ipynb
+++ b/4.0_GaussianProcess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "4a418d22-4023-4f4d-93bc-8280ed0a961d",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "669d2852-8794-427f-9d0a-d240d55cb141",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "7f8a6d62-f05e-4689-afde-6edd36dac68b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "fedd871b-5f69-4cab-8583-d5a58dad00fd",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "5dcbe585-0804-4a60-a97e-2d3a957c0a61",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "d20e98cf-95b1-477f-966d-83d1d5064616",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "21ac72c8-f4b5-4cce-bcc3-439640f338dd",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "ec1d9ff2-4bf8-41ca-a272-a601006d0932",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "[52584 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,8 +236,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0196c616-a1ce-4339-8ab7-c83406f0dd4e",
+   "metadata": {},
+   "source": [
+    "We do not need to cyclical encode seasonal features, as we will apply a periodic kernel to them."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "8aac49c4-dc2f-4768-8449-6b723c6127bc",
    "metadata": {},
    "outputs": [],
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "82996eeb-c9ae-4f26-92ca-752ed658a964",
    "metadata": {},
    "outputs": [
@@ -414,7 +422,7 @@
        "[52584 rows x 6 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "d18ff6f2-7ef9-4bde-9082-b24a1b1d2206",
    "metadata": {},
    "outputs": [],
@@ -439,15 +447,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "e1cf01c5-706c-44a3-93fc-bbb5147eabbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Match the sequence2sequence testing scheme\n",
+    "# Evaluation parameters that match the sequence2sequence testing scheme\n",
     "horizon = 32 # Forecast horizon\n",
-    "first_t = df[df[\"time\"] == '2022-10-18 16:00:00'].index # First prediction point\n",
+    "first_t = df[df[\"time\"] == '2022-10-18 16:00:00'].index[0] # First prediction point\n",
     "stride = 24 # Number of timesteps between each prediction point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f7e420b3-8d4f-4fa9-9435-134f061ed85e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initial train - test split\n",
+    "X_train, X_test = X[:first_t, :], X[first_t:, :]\n",
+    "y_train, y_test = y[:first_t], y[first_t:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85695f2d-70d5-4c31-a16e-61dddb183f55",
+   "metadata": {},
+   "source": [
+    "## Model & wrapper definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76fd89e6-4c21-452f-96ca-e06f9db81c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ExactGP model class\n",
+    "class ExactGPModel(gpytorch.models.ExactGP):\n",
+    "\n",
+    "    def __init__(self, X_train, y_train, likelihood):\n",
+    "        super().__init__(X_train, y_train, likelihood)\n",
+    "        self.mean_module = gpytorch.means.ConstantMean()\n",
+    "        self.covariance_module = # Linear(trend) + Periodic(hour) + Periodic(day) + Periodic(Month)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = self.mean_module(x)\n",
+    "        covar = self.covariance_module(x)\n",
+    "        return gpytorch.distributions.MultivariateNormal(mean, covar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74554259-6cfc-4e2f-b1ef-c62fc4c06d86",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# ExactGP wrapper class\n",
+    "class ExactGP:\n",
+    "    \n",
+    "    def __init__(self, model, likelihood, cuda = True):\n",
+    "        self.model = model,\n",
+    "        self.likelihood = likelihood,\n",
+    "        self.cuda = cuda\n",
+    "\n",
+    "    # Training method\n",
+    "    def train(self, X_train, y_train, max_epochs, learning_rate = 1e-3, early_stop = 10, early_stop_tol = 1e-4)\n",
+    "\n",
+    "        # Put tensors on GPU if cuda is enabled\n",
+    "        if cuda:\n",
+    "            X_train = X_train.cuda()\n",
+    "            y_train = y_train.cuda()\n",
+    "            self.model = self.model.cuda()\n",
+    "            self.likelihood = self.likelihood.cuda()\n",
+    "\n",
+    "        # Find optimal kernel hyperparameters\n",
+    "        self.model.train()\n",
+    "        self.likelihood.train()\n",
+    "\n",
+    "        # Create Adam optimizer with model parameters\n",
+    "        optimizer = torch.optim.Adam(self.model.parameters(), lr = learning_rate)\n",
+    "\n",
+    "        # Create marginal log likelihood loss\n",
+    "        mll = gpytorch.mlls.ExactMarginalLogLikelihood(self.likelihood, self.model)\n",
+    "\n",
+    "        # Training loop\n",
+    "        for epoch in range(max_epochs):\n",
+    "\n",
+    "            # Early stop\n",
+    "            if self._epochs_no_improvement >= early_stop:\n",
+    "                print(f\"Early stopping at epoch {epoch+1}\")\n",
+    "                break\n",
+    "\n",
+    "            # Reset gradients\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # Get outputs from model\n",
+    "            output = self.model(X_train)\n",
+    "\n",
+    "            # Calculate loss and perform backpropagation\n",
+    "            loss = -mll(output, y_train)\n",
+    "            loss.backward()\n",
+    "\n",
+    "            # Print epoch info & update model parameters\n",
+    "            noise = self.model.likelihood.noise\n",
+    "            print(f\"Epoch: {epoch+1}/{max_epochs}, Loss: {loss}, Noise: {noise}\")\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            # Initialize best loss & rounds with no improvement if first epoch\n",
+    "            if epoch == 0:\n",
+    "                self._best_loss = loss\n",
+    "                self._epochs_no_improvement = 0\n",
+    "\n",
+    "            # Record an epoch with no improvement\n",
+    "            if self._best_loss < loss - early_stop_tol:\n",
+    "                self._epochs_no_improvement += 1\n",
+    "\n",
+    "            # Record an improvement in the loss\n",
+    "            if self._best_loss > loss:\n",
+    "                self._best_loss = loss\n",
+    "                self._epochs_no_improvement = 0\n",
+    "                \n",
+    "    # Method to update model training data (kernel hyperparameters unchanged, no additional training)\n",
+    "    def update_train(self, X_update, y_update):\n",
+    "        \n",
+    "        # Put tensors on GPU if cuda is enabled\n",
+    "        if cuda:\n",
+    "            X_update = X_update.cuda()\n",
+    "            y_update = y_update.cuda()\n",
+    "\n",
+    "        # Update model training data\n",
+    "        self.model = self.model.get_fantasy_model(X_update, y_update)\n",
+    "\n",
+    "    # Predict method\n",
+    "    def predict(self, X_test, cpu = True, fast_preds = False)\n",
+    "\n",
+    "        # Test data to GPU, if cuda enabled\n",
+    "        if cuda:\n",
+    "            X_test = X_test.cuda()\n",
+    "\n",
+    "        # Activate eval mode\n",
+    "        self.model.eval()\n",
+    "        self.likelihood.eval()\n",
+    "\n",
+    "        # Make predictions without gradient calculation\n",
+    "        with torch.no_grad(), gpytorch.settings.fast_pred_var(state = fast_preds):\n",
+    "\n",
+    "            # Returns the model posterior distribution over functions p(f*|x*, X, y)\n",
+    "            # Noise is not yet added to the functions\n",
+    "            f_posterior = self.model(X_test)\n",
+    "\n",
+    "            # Returns the predictive posterior distribution p(y*|x*, X, y)\n",
+    "            # Noise is added to the functions\n",
+    "            y_posterior = self.likelihood(f_posterior)\n",
+    "\n",
+    "            # Get posterior predictive mean & prediction intervals\n",
+    "            # By default, 2 standard deviations around the mean\n",
+    "            y_mean = y_posterior.mean()\n",
+    "            y_lower, y_upper = y_posterior.confidence_region()\n",
+    "\n",
+    "        # Return data to CPU if desired\n",
+    "        if cpu:\n",
+    "            y_posterior = y_posterior.cpu()\n",
+    "            y_mean = y_mean.cpu()\n",
+    "            y_lower = y_lower.cpu()\n",
+    "            y_upper = y_upper.cpu()\n",
+    "\n",
+    "        return y_posterior, y_mean, y_lower, y_upper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12425720-ebb0-44d7-aa74-809878345e24",
+   "metadata": {},
+   "source": [
+    "Use get_fantasy_model method to update trained model's training data with new input sequences. Hyperparameters are not updated, which kind of mirrors the usage of input sequnces in NN models.\n",
+    "\\\n",
+    "Can be too slow with exact inference. In that case, look into sparse variational inference & possibly minibatch training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09a84582-096d-49dc-9ae2-32165b646a80",
+   "metadata": {},
+   "source": [
+    "## Model testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c7a3109-e1ca-4b1c-a95d-2e2e1d0f7264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create model & likelihood\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f84594e-4b82-4aa9-8918-cec5ad560a68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create scaler"
    ]
   },
   {
@@ -474,11 +685,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f42d63-6aea-40da-b45d-7e0a45477619",
+   "id": "9e2d49a9-6589-4055-86cd-0325490f5feb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GPyTorch model training wrapper similar to Lightning"
+    "# Plot predicted vs. actual, entire test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d716194-ebbe-4faf-b5d1-9fafaf4e077f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot predicted vs. actual, select sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f946400b-88a9-4cb3-8397-186e8f8b6579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate performance metrics"
    ]
   }
  ],
