Finish GP notebook, generate requirements.txt

--- a/4.0_GaussianProcess.ipynb
+++ b/4.0_GaussianProcess.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "4a418d22-4023-4f4d-93bc-8280ed0a961d",
    "metadata": {},
    "outputs": [],
@@ -533,11 +533,12 @@
    "metadata": {},
    "source": [
     "Summary of training strategies tried:\n",
-    "- ExactGP can only be trained with unbatched gradient descent. The full training data does not fit into GPU memory. Training with the last ~9k observations works quite well for predicting the first few days of the testing set. Predictions move away from the series level as the distance from the training set increases, which is expected. Could be solved by rolling online updates of training data.\n",
+    "- ExactGP can only be trained with unbatched gradient descent. The full training data does not fit into GPU memory. Training with the last ~9k observations in the training set works quite well for predicting the first few days of the testing set. Predictions move away from the series level as the distance from the training set increases, which is expected. Could be solved by rolling online updates of training data.\n",
     "- SVGP can be trained with with batched gradient descent. Only fits into GPU memory with few inducing points, because inducing points are unbatched, kind of defeating the purpose of using SGD. Does not fit & converge properly, likely due to reliance on inducing points.\n",
-    "- VNNGP supports batching the inducing points, essentially using the entire data as both training data & inducing points. The initial computing of the k-nearest neighbor structure (when the model is created, not trained) is slow, but can be made faster by installing the faiss package. The entire data can be used as inducing points, but training loss is inexplicably high compared to SVGP (200k to 2k in 15-20 epochs), and predictions fluctuate around zero seemingly randomly. Also constant warnings for negative variances are raised.\n",
+    "- VNNGP supports batching the inducing points, essentially using the entire data as both training data & inducing points. The initial computing of the k-nearest neighbor structure (when the model is created, not trained) is slow, but can be made faster by installing the faiss package. The entire data can be used as inducing points, but training loss is inexplicably high compared to SVGP (200k to 2k in 15-20 epochs), and predictions fluctuate around zero seemingly randomly. Also, constant warnings for negative variances are raised. I don't know why exactly this training approach fails to learn while the exact method does quite well. My theory is that the nearest neighbor structure somehow does not work with ordered time series data.\n",
     "\n",
-    "Based on all this, we continue with the ExactGP method, subsetting the training data."
+    "Based on all this, we continue with the ExactGP method, subsetting the training data. All of the strategies above were tried with the same covariance kernel choices: A linear kernel applied to the time series index (trend dummy), and a separate periodic kernel applied to each seasonal feature (hour, day of week, month of year), all combined additively.\n",
+    "- Applying all kernels to just the time index failed to learn the seasonality properly."
    ]
   },
   {
@@ -693,11 +694,11 @@
     "        # Make predictions without gradient calculation\n",
     "        with torch.no_grad(), gpytorch.settings.fast_pred_var(state = fast_preds):\n",
     "\n",
-    "            # Returns the model posterior distribution over functions p(f*|x*, X, y)\n",
+    "            # Returns the model posterior distribution over functions: p(f*|X_test, X_train, y_train)\n",
     "            # Noise is not yet added to the functions\n",
     "            f_posterior = self.model(X_test)\n",
     "\n",
-    "            # Returns the predictive posterior distribution p(y*|x*, X, y)\n",
+    "            # Returns the predictive posterior distribution: p(y*|X_test, X_train, y_train)\n",
     "            # Noise is added to the functions\n",
     "            y_posterior = self.likelihood(f_posterior)\n",
     "\n",
@@ -706,7 +707,8 @@
     "            y_mean = y_posterior.mean\n",
     "            y_lower, y_upper = y_posterior.confidence_region()\n",
     "\n",
-    "        # Return data to CPU if desired\n",
+    "        # Return predictions to CPU if desired\n",
+    "        # Could be advantageous to stack the predictions into one array\n",
     "        if cpu:\n",
     "            y_mean = y_mean.cpu()\n",
     "            y_lower = y_lower.cpu()\n",
@@ -720,7 +722,7 @@
     "\n",
     "        return y_mean, y_lower, y_upper\n",
     "\n",
-    "    # Method to update model training data (kernel hyperparameters unchanged, no additional training)\n",
+    "    # Method to update model training data (kernel hyperparameters unchanged, no additional training performed)\n",
     "    # When done repeatedly, GPU memory fills up, couldn't determine exact cause or find a fix.\n",
     "    def update_train(self, X_update, y_update):\n",
     "        \n",
@@ -769,11 +771,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cecc1647-243c-4799-9a85-d16bf9ae9743",
+   "cell_type": "raw",
+   "id": "ab4abd94-e41c-445e-9f53-c44f7cba1351",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Perform training\n",
     "trainer.train(\n",
@@ -786,11 +786,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f4804ec-5820-4451-b081-86724e5400f0",
+   "cell_type": "raw",
+   "id": "1d2237cb-eabb-448c-ab75-938ea3012890",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Save model state\n",
     "model_name = \"ExactGP1.pth\"\n",
@@ -941,10 +939,10 @@
    "id": "c82300dd-a542-4826-b9a1-b22cd4de0ef4",
    "metadata": {},
    "source": [
-    "The initial predictions are pretty good, and the kernels seem to be suitable for learning the periodicity of the data.\n",
+    "The initial predictions for the first few days are pretty good, and the kernels seem to be suitable for learning the seasonality of the data.\n",
     "\\\n",
     "\\\n",
-    "As the time index moves away from the last training point, the forecasts considerably deviate from the level of the data, but that is very natural with an effective forecast horizon of ~9k. The lack of a past target covariate may be preventing the model from reacting to short-term cyclicality, as the LSTM and Transformer did not have this problem overall. "
+    "As the time index moves away from the last training point, the forecasts considerably deviate from the level of the data, but that is very natural with an effective forecast horizon of ~9k points. The lack of a past target covariate may be preventing the model from reacting to short-term cyclicality, as the LSTM and Transformer did not have this problem overall. "
    ]
   },
   {
@@ -960,13 +958,13 @@
    "id": "7b064d59-c047-4531-9b3c-f2d2bbbc1df0",
    "metadata": {},
    "source": [
-    "It's possible to update the GP's training data with new data, extending its relevance to longer forecast horizons. Hyperparameters are not updated, as no additional training or optimization takes place. This kind of mirrors the usage of input sequnces during prediction time in time series forecasting NN models. We condition the model on new data, essentially providing it with new context.\n",
+    "It's possible to update the GP's training data with new data, extending its relevance to longer forecast horizons. Hyperparameters are not updated, no additional training or optimization takes place. This mirrors the usage of input sequences during prediction time in time series forecasting NN models. We condition the model on new data, essentially providing it with new context.\n",
     "\\\n",
     "\\\n",
     "After each prediction, we will extend the training data in rolling fashion, with the newly predicted datapoints and the following 24 hours. This way, each new prediction starts from 16:00. \n",
     "\\\n",
     "\\\n",
-    "Issue: GPU memory fills up as the model training data is updated. The loop still returns the predictions until then, so no need to rerun with a subset of the data. Again, this wouldn't be a problem in deployment, as we would do a single model update + prediction in one go, with a short horizon."
+    "Issue: GPU memory fills up as the model training data is updated. The loop still returns the predictions made before the GPU runs out of memory, so no need to rerun with a subset of the data. Again, this wouldn't be a problem in deployment, as we would likely do a single model update + prediction in one run, with a short horizon. We can also retrain the model with training data shifted forward in time, keeping the training data size constant as we extend it into the future."
    ]
   },
   {
@@ -980,7 +978,7 @@
     "horizon = 32 # Forecast horizon\n",
     "stride = 24 # Number of timesteps between each prediction point\n",
     "first_t = df[df[\"time\"] == '2022-10-18 16:00:00'].index[0] # First prediction point\n",
-    "last_t = df.loc[(df.time.dt.hour == 16) & (df.index + horizon - 1 <= df.index.values[-1])].index.values[-2] # Last prediciton point\n",
+    "last_t = df.loc[(df.time.dt.hour == 16) & (df.index + horizon - 1 <= df.index.values[-1])].index.values[-2] # Last prediction point\n",
     "n_windows = len(range(first_t + 1, last_t + 1, stride)) # N. of eval windows after first"
    ]
   },
@@ -1046,7 +1044,7 @@
    "source": [
     "# Sequence2sequence testing loop\n",
     "\n",
-    "# Initialize predictons with first forecast horizon\n",
+    "# Initialize predictions with first forecast horizon\n",
     "preds_mean, preds_upper, preds_lower = trainer.predict(X_test[:horizon, :])\n",
     "\n",
     "# Initialize predictions' time step indices\n",
@@ -1132,6 +1130,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc6789b6-26aa-42b7-be25-7dcf49051b6a",
+   "metadata": {},
+   "source": [
+    "We're able to predict roughly ~2k out of the previously predicted ~9k testing observations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "90c340d1-1d90-483b-ba19-5f57674bf297",
@@ -1196,7 +1202,7 @@
    "id": "21d88db8-38f5-48b5-b217-6b0534d5a2e5",
    "metadata": {},
    "source": [
-    "The plot is a little bit misleading, as the predicted values line (orange) is only plotted for the x-axis values where a prediction was made. The gaps, which correspond to the 24-hour stride periods without predictions, are connected with straight lines. Still, we can see the forecasts now continue to match the level of the data quite well. The intervals also cover the actual values pretty well, which could be all one can ask for."
+    "The plot is a little bit misleading, as the predicted values line (orange) is only plotted for the x-axis values where a prediction was made. The gaps, which correspond to the 24-hour stride periods without predictions, are connected with straight lines. Still, we can see the forecasts now continue to match the level of the data quite well as the predictions extend into the future. The forecast intervals also cover the actual values pretty well, which could be all one can ask for."
    ]
   },
   {
@@ -1204,13 +1210,14 @@
    "id": "520ee520-77a3-4a4f-bcfc-633295274c3d",
    "metadata": {},
    "source": [
-    "To sum up, the GP forecasting approach is probably very efficient when:\n",
-    "- The training time series is not too long, or the near history is sufficient to learn the relationships,\n",
+    "To sum up, the GP forecasting approach is probably best considered when:\n",
+    "- The training time series is not too long, or the near history is sufficient to make good predictions,\n",
     "- The number of covariates is few, and the kernel choices for them are straightforward,\n",
     "- Seasonality is strong & fixed (or there are other strongly predictive & easily available future covariates),\n",
     "- Either a fixed trend is present, or the series level is constant,\n",
     "- Cyclicality is low, or to put it another way, the additional predictive value of the past target values (or additional past covariates) are low,\n",
-    "- Online training data updates can be used to extend the model's relevance into the future."
+    "- Online training data updates can be used to extend the model's relevance into the future,\n",
+    "- The predictions are not required real-time."
    ]
   }
  ],
