Test Fourier features with LSTM

--- a/3.2_LITransformer.ipynb
+++ b/3.2_LITransformer.ipynb
@@ -2192,10 +2192,16 @@
     "def objective_transformer(trial):\n",
     "\n",
     "    # Define search space\n",
-    "    d_model = 2 ** trial.suggest_int(\"d_model\", 2, 6) # Powers of 2, 4 to 128\n",
     "    n_heads = 2 ** trial.suggest_int(\"n_heads\", 1, 3) # Powers of 2, 2 to 8\n",
+    "\n",
+    "    # The PyTorch Transformer requires d_model to be divisible by n_heads\n",
+    "    d_model = max(\n",
+    "        n_heads,\n",
+    "        2 ** trial.suggest_int(\"d_model\", 2, 6) # Powers of 2, 4 to 64\n",
+    "    )\n",
+    "    \n",
     "    n_encoders = trial.suggest_int(\"n_encoders\", 1, 3) # 1 to 3\n",
-    "    d_feedforward = 2 ** trial.suggest_int(\"d_feedforward\", 2, 6) # Powers of 2, 4 to 128\n",
+    "    d_feedforward = 2 ** trial.suggest_int(\"d_feedforward\", 2, 6) # Powers of 2, 4 to 64\n",
     "    activation = trial.suggest_categorical(\"activation\", [\"relu\", \"gelu\"])\n",
     "    learning_rate = trial.suggest_float(\"learning_rate\", 5e-4, 5e-2) # 0.0005 to 0.05\n",
     "    lr_decay = trial.suggest_float(\"lr_decay\", 0.9, 1)\n",
