--- a/analysis/1-data-prep.ipynb
+++ b/analysis/1-data-prep.ipynb
@@ -5,7 +5,9 @@
    "id": "02c16907-f501-4694-8c30-28bc46125ea1",
    "metadata": {},
    "source": [
-    "This notebook reformats the energy consumption, generation & pricing data sourced from the EPİAŞ transparency platform ([link](https://seffaflik.epias.com.tr/home))."
+    "This notebook was used to reformat & merge the energy consumption, generation & pricing data sourced from the EPİAŞ transparency platform ([link](https://seffaflik.epias.com.tr/home)).\n",
+    "\n",
+    "The resulting merged dataset is available on [Kaggle](https://www.kaggle.com/datasets/ahmetzamanis/energy-consumption-and-pricing-trkiye-2018-2023)."
    ]
   },
   {
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f5b3adf7-713b-4b5a-89de-d22d2fae48ec",
    "metadata": {},
    "outputs": [],
@@ -29,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "dbacdee2-efaa-40de-bd8d-b841d5714529",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = \"./InputData/\"\n",
-    "output_dir = \"./OutputData/\""
+    "input_dir = \"../data/raw/\"\n",
+    "output_dir = \"../data/processed/\""
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "ffdf7cdd-b420-4ffe-8a18-af16ada66984",
    "metadata": {},
    "outputs": [],
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "621b9fb9-557b-46ff-bd0a-277ec153c613",
    "metadata": {},
    "outputs": [],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "36beb5bb-dc4d-4364-8902-09066c3371b3",
    "metadata": {},
    "outputs": [],
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "033720a5-9128-40ec-b9fe-a5397673634d",
    "metadata": {},
    "outputs": [
@@ -203,7 +205,7 @@
        "[52584 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "cbfe331d-0711-47f4-922d-d2fff60846f8",
    "metadata": {},
    "outputs": [
@@ -226,7 +228,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "1d6ced48-3c0f-44ca-a6ab-3b7a4031ada1",
    "metadata": {},
    "outputs": [
@@ -315,7 +317,7 @@
        "max       55575.020000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "9f3aee99-58a7-4e3b-b335-6116ba75b99a",
    "metadata": {},
    "outputs": [],
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "10c0fcd0-9530-4b2b-b90b-d55a4f2f420a",
    "metadata": {},
    "outputs": [],
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "be29a903-0844-400a-bd83-dd8507e94dfc",
    "metadata": {},
    "outputs": [],
@@ -378,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "eb6ef200-e038-47d6-bb10-3675cc74269a",
    "metadata": {},
    "outputs": [],
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "97c02e6e-9b5c-4b42-9479-5a9c94cd4707",
    "metadata": {},
    "outputs": [],
@@ -412,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "8e0d9656-c332-45f5-9241-bc201287c202",
    "metadata": {},
    "outputs": [
@@ -750,7 +752,7 @@
        "[52584 rows x 18 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "8abe5ffc-a15d-4a39-ab4c-143a3137529a",
    "metadata": {},
    "outputs": [
@@ -789,7 +791,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "76d50aec-5900-42fb-9077-4e70701fd42b",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1054,7 @@
        "max        1.880000    1648.540000    127.760000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "568cd36b-c009-430a-a748-036c58f825aa",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1084,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "5a8cae99-0e33-4145-912a-d23b7dc63a6c",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "c93272f4-208a-40bf-ae70-50fcd1ef5b43",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "6c210011-9ef2-4992-aedb-b57c8c6a5fd1",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "296b34e1-7f9d-478a-956e-f2b750f34580",
    "metadata": {},
    "outputs": [
@@ -1293,7 +1295,7 @@
        "[52584 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "bbfb2cfa-d5b3-426a-a2fc-80c8696c4076",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1320,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "8e7c8c2f-df05-4b30-be19-77036a2d1f4b",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1427,7 @@
        "max     4800.000000    264.170000    271.630000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "20e0fe47-0889-41c1-82d9-3b495daae496",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "c02a11fe-38ec-45d3-9c09-c0d900523556",
    "metadata": {},
    "outputs": [
@@ -1833,7 +1835,7 @@
        "[52584 rows x 22 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "6d7e2b0b-1d88-45a3-9907-3822fcc1b712",
    "metadata": {},
    "outputs": [],
