Restructure repo for deployment

--- a/analysis/1-data-prep.ipynb
+++ b/analysis/1-data-prep.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = \"../data/raw/\"\n",
-    "output_dir = \"../data/processed/\""
+    "input_dir = \"../data/analysis/raw/\"\n",
+    "output_dir = \"../data/analysis/processed/\""
    ]
   },
   {
