--- a/analysis/3-feature-engineering.ipynb
+++ b/analysis/3-feature-engineering.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/processed/\""
+    "data_dir = \"../data/analysis/processed/\""
    ]
   },
   {
