--- a/analysis/4.0-stateful-lstm.ipynb
+++ b/analysis/4.0-stateful-lstm.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/processed/\""
+    "data_dir = \"../data/analysis/processed/\""
    ]
   },
   {
