--- a/analysis/wip-darts-lm.ipynb
+++ b/analysis/wip-darts-lm.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = \"./OutputData/\""
+    "data_dir = \"../dataa/analysis/processed/\""
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(output_dir + \"train_data.csv\")\n",
+    "df = pd.read_csv(data_dir + \"train_data.csv\")\n",
     "df[\"time\"] = pd.to_datetime(df[\"time\"])"
    ]
   },
