--- a/analysis/2-eda.ipynb
+++ b/analysis/2-eda.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/processed/\""
+    "data_dir = \"../data/analysis/processed/\""
    ]
   },
   {
