--- a/analysis/4.2-gaussian-process.ipynb
+++ b/analysis/4.2-gaussian-process.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"../data/processed/\""
+    "data_dir = \"../data/analysis/processed/\""
    ]
   },
   {
@@ -602,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = \"../models/gaussian_process/\""
+    "model_dir = \"../models/analysis/gaussian_process/\""
    ]
   },
   {
