--- a/notebooks/analysis/3-feature-engineering.ipynb
+++ b/notebooks/analysis/3-feature-engineering.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Real-time consumption is available with a 2 hour lag. Shift them back\n",
+    "# Real-time consumption is available with a 2 hour lag. Shift it forward to get lagged variable\n",
     "df[\"consumption_lag2\"] = df[\"consumption_MWh\"].shift(2)\n",
     "df = df.dropna()"
    ]
