Write data update script, configure with Hydra
Data update code & script works as intended.
Make sure Hydra log folder name is properly configured & ignored.
Use Makefile to run scripts with default configs.
Use commands manually to override configs with Hydra.

--- a/notebooks/deployment/1-get-data.ipynb
+++ b/notebooks/deployment/1-get-data.ipynb
@@ -623,15 +623,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35072371-d5d1-48c5-bfa0-fa68982c824b",
+   "id": "e4c00051-7981-438e-9cbe-2dc8a02abb38",
    "metadata": {},
    "source": [
-    "End date is sometimes rounded up to the next hour: \n",
-    "- Request date: 11:59am,\n",
-    "- end_date: 9:59am,\n",
-    "- Final date in returned data: 10:00am,\n",
+    "If current date is 16:15, request end date is 14:15. \n",
     "\n",
-    "Not a problem, as the data for 10-11am is nearly complete by 11:59am."
+    "API seems to return 15:00 as the last datapoint -which is incomplete at 16:15-, instead of 14:00, the last complete datapoint.\n",
+    "\n",
+    "Fixed in the source code by subtracting (consumption_lag + 1) from current date."
    ]
   },
   {
